Write even more tests in CompanyServiceTest.java class - Write more tests to achieve needed line-coverage - Fix warnings on older tests